@@ -4432,6 +4432,55 @@ obtained from species NH4+ by subtracting the ionization energy of NH4 (4.410300
        -2.549398119e+01  /* b2 */            
       }
     },
+
+/* 
+   species NH3v
+   pos 0: Tmin lower range limit
+   pos 1: Tmax upper range limit
+   pos 2-8: a1,a2,...,a7
+   pos 9-10: b1,b2
+*/    
+    {
+      {
+       +200.00e0,         /* Tmin [K] */ 
+       +1000.0e0,        /* Tmax [K] */
+       -7.681226150e+04, /* a1 */
+       +1.270951578e+03, /* a2 */
+       -3.893229130e+00, /* a3 */
+       +2.145988418e-02, /* a4 */
+       -2.183766703e-05, /* a5 */
+       +1.317385706e-08, /* a6 */
+       -3.332322060e-12, /* a7 */
+       -1.264886413e+04, /* b1 */
+       +4.366014588e+01  /* b2 */
+      },
+      {
+       +1000.0e0,        /* Tmin [K] */ 
+       +(6000.0e0-dTrangemin),        /* Tmax [K] */
+       +2.452389535e+06, /* a1 */
+       -8.040894240e+03, /* a2 */
+       +1.271346201e+01, /* a3 */
+       -3.980186580e-04, /* a4 */
+       +3.552502750e-08, /* a5 */
+       +2.530923570e-12, /* a6 */
+       -3.322700530e-16, /* a7 */
+       +4.386191960e+04, /* b1 */
+       -6.462330602e+01  /* b2 */        
+      },
+      {
+       +(6000.0e0-dTrangemin),        /* Tmin [K] */ 
+       +6000.0e0,        /* Tmax [K] */
+       +2.452389535e+06, /* a1 */
+       -8.040894240e+03, /* a2 */
+       +1.271346201e+01, /* a3 */
+       -3.980186580e-04, /* a4 */
+       +3.552502750e-08, /* a5 */
+       +2.530923570e-12, /* a6 */
+       -3.322700530e-16, /* a7 */
+       +4.386191960e+04, /* b1 */
+       -6.462330602e+01  /* b2 */        
+      }
+    },  
                                                               
   };
 
